--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,6 +10,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This site was created by Volodymyr Moskalenko. It uses data from mapbox and weatherstack.</p>
         <img class="portrait" src="img/robot.png" width="300" height="350">
     </div>
     {{>footer}}
